<resources>
    <string name="app_name">影视天地</string>
    <string name="loading">loading</string>
    <string name="weixin_share">微信分享</string>
    <string name="txt_tab1">电影</string>
    <string name="txt_tab2">电视</string>
    <string name="txt_tab3">综艺</string>
    <string name="txt_tab4">动漫</string>
    <string name="txt_tab5">我的</string>
    <string name="menu_search">搜索</string>
    <string name="menu_change_source">切换影视源</string>
    <string name="menu_change_theme">切换主题</string>
    <string name="menu_setting">设置</string>

    <string name="txt_type0">全部</string>
    <string name="txt_type1">动作</string>
    <string name="txt_type2">喜剧</string>
    <string name="txt_type3">爱情</string>
    <string name="txt_type4">科幻</string>
    <string name="txt_type5">剧情</string>
    <string name="txt_type6">悬疑</string>
    <string name="txt_type7">文艺</string>
    <string name="txt_type8">战争</string>
    <string name="txt_type9">恐怖</string>
    <string name="txt_type10">灾难</string>
    <string name="txt_type20">记录</string>
    <string name="txt_type21">伦理</string>
    <string name="txt_type28">福利</string>

    <string name="txt_type11">华语</string>
    <string name="txt_type12">欧美</string>
    <string name="txt_type13">日韩</string>
    <string name="txt_type14">经典</string>
    <string name="txt_type15">热门</string>
    <string name="txt_type16">最新</string>
    <string name="txt_type17">大陆</string>
    <string name="txt_type18">台湾</string>
    <string name="txt_type19">其他</string>

    <string name="txt_type22">国产</string>
    <string name="txt_type23">港台</string>
    <string name="txt_type24">欧美</string>
    <string name="txt_type25">日剧</string>
    <string name="txt_type26">韩剧</string>
    <string name="txt_type27">泰剧</string>
    <string name="txt_type29">港剧</string>
    <string name="txt_type30">台剧</string>

    <string name="txt_date">更新日期</string>
    <string name="txt_name">名称</string>
    <string name="txt_translate_name">别名</string>
    <string name="txt_year">年份</string>
    <string name="txt_area">地区</string>
    <string name="txt_style">类型</string>
    <string name="txt_language">语言</string>
    <string name="txt_subtitles">字幕</string>
    <string name="txt_release_date">上映日期</string>
    <string name="txt_imdb_score">IMDB评分</string>
    <string name="txt_douban_score">豆瓣评分</string>
    <string name="txt_file_format">文件格式</string>
    <string name="txt_file_size">分辨率</string>
    <string name="txt_file_amounts">文件大小</string>
    <string name="txt_file_length">时长</string>
    <string name="txt_author">编剧</string>
    <string name="txt_director">导演</string>
    <string name="txt_performer">主演</string>
    <string name="txt_awards">获奖情况</string>
    <string name="txt_episodes">集数</string>

    <string name="txt_link">链接</string>
    <string name="txt_thunder">手机迅雷</string>
    <string name="txt_copy_link">复制下载链接</string>

    <string name="txt_detail">资源详情</string>

    <string name="txt_search_tab1">创建时间</string>
    <string name="txt_search_tab2">访问热度</string>
    <string name="txt_search_tab3">文件大小</string>
    <string name="txt_search_tab4">相关程度</string>

    <string name="txt_search_empty_tips">请输入搜索内容</string>
    <string name="txt_search_timeout">搜索超时</string>

    <string name="txt_change_source_a">切换至资源库 A </string>
    <string name="txt_change_source_b">切换至资源库 B </string>
    <string name="txt_change_source_c">切换至资源库 C </string>
    <string name="txt_change_source_d">切换至资源库 D </string>
    <string name="txt_change_source_e">切换至资源库 E </string>
    <string name="txt_change_search_a">切换至搜索引擎 A </string>
    <string name="txt_change_search_b">切换至搜索引擎 B </string>

    <string name="ok">确定</string>
    <string name="all">全部</string>
    <string name="cancel">取消</string>
    <string name="update">新版本更新</string>
    <string name="no_update_tips">当前已是最新版本</string>
    <string name="update_file_name">VideoWorld.apk</string>

    <string name="txt_download_path">下载路径</string>
    <string name="txt_version">版本号</string>
    <string name="txt_clear_cache">清理缓存</string>
    <string name="txt_collect">收藏记录</string>
    <string name="txt_history">播放记录</string>
    <string name="txt_QQ">和谐群</string>
    <string name="txt_feedback">反馈</string>
    <string name="txt_admire">赞赏</string>
    <string name="txt_common_detail">详情</string>
    <string name="txt_feedback_commit">提交</string>
    <string name="txt_feedback_tips">意见、建议、吐槽…畅所欲言</string>
    <string name="txt_no_feedback_tips">请先输入您的反馈内容</string>
    <string name="txt_feedback_success_tips">感谢您的反馈</string>
    <string name="txt_about">关于</string>
    <string name="txt_local_play">本地播放</string>
    <string name="txt_download_manager">下载中心</string>
    <string name="txt_selector">筛选</string>
    <string name="txt_download">下载</string>
    <string name="txt_no_data">暂无数据</string>
    <string name="txt_load_more">加载更多中…</string>
    <string name="txt_admire_desc">Hello，影视天地的服务运行在云服务器上，开发者需要支付一笔不小的开销，即使这样开发者仍然不希望接入广告，影响用户体验。如果您喜欢影视天地，可以赞赏一下帮助开发者提供更好的服务，同时您也将获赠畅玩特权天数</string>
    <string name="txt_admire_tips">(赞赏务必上传截图，否则无法获赠畅玩天数；畅玩特权是与设备绑定的，更换设备将无法享受该账号畅玩特权)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
