<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:icon="@drawable/ic_change_source"
        android:title="@string/menu_search"/>

    <item
        android:id="@+id/action_change_source"
        android:icon="@drawable/ic_change_source"
        android:title="@string/menu_change_source"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <!--<item-->
        <!--android:id="@+id/action_setting"-->
        <!--android:icon="@drawable/ic_setting"-->
        <!--android:title="@string/menu_search"-->
        <!--app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_change_theme"
        android:icon="@drawable/ic_change_theme"
        android:title="@string/menu_change_theme"
        app:showAsAction="never" />

</menu>