<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/com_wm_bg"
    android:orientation="vertical"
    tools:context="com.lxw.videoworld.app.ui.FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/com_main_A"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txt_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_feedback"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_feedback"
        android:gravity="left"
        android:background="@drawable/bg_tab_select"
        android:textColor="?attr/com_font_A"
        android:textSize="@dimen/sp_16"
        android:textColorHint="?attr/com_font_C"
        android:hint="@string/txt_feedback_tips"
        android:layout_margin="@dimen/dp_15"
        android:padding="@dimen/dp_15"
        android:minHeight="@dimen/dp_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_feedback"
        android:background="@drawable/selector_btn_bg"
        android:text="@string/txt_feedback_commit"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
